[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.10

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
	  data/
	M	items/items.xml
		monsters/
	D		elderbeholder.xml
	A		elderbonelord.xml
	M		monsters.xml
]

[ Milestone
]