@@ -22,6 +22,7 @@
 
 	M The Forgotten Server.exe
 	  data/
+	M	creaturescripts/scripts/playerdeath.lua
 	M	items/items.xml
 		monsters/
 	D		elderbeholder.xml
